# vsa_stonefish

./: CMakeLists.txt  LICENSE  package.xml
launch/: lauv_open_sea.launch.py  lauv_tank.launch.py  sparus2_open_sea.launch.py  sparus2_tank.launch.py
scenarios/: lauv_open_sea.scn  lauv_tank.scn  sparus2_open_sea.scn  sparus2_tank.scn
src/: vsa_stonefish_node.cpp
vehicles/: _lauv.scn  lauv.scn  sparus2.scn
